--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ footer {
     font-weight: bold;
     margin: 0 auto;
     text-align: center;
+    width: 80%;
 }
 footer ul {
     margin: 0;
@@ -214,6 +215,9 @@ IDs and classes
 }
 #nav-main ul li:first-child {
     padding-left: 0;
+}
+#nav-main ul li:last-child {
+    padding-right: 3rem;
 }
 
 #sitemap {
@@ -382,7 +386,8 @@ figure.fluid-images-3 img:first-child {
 }
 .hometop-news {
     border-top: 15px solid #fea626;
-    height: 200px;
+    height: 220px;
+    margin-right: 3rem;
 }
 .hometop-news h2 {
     color: #ff7043;
@@ -420,6 +425,9 @@ figure.fluid-images-3 img:first-child {
 }
 .margin-1-top {
     margin-top: 1rem;
+}
+.margin-2-top {
+    margin-top: 2rem;
 }
 .margin-4 {
     margin: 4rem;
