--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,13 @@ IDs and classes
 #nav-main {
     background: #fff;
 }
+#nav-main a {
+    color: #ffa726;
+    text-decoration: none;
+}
+#nav-main a:hover {
+    color: #e28600;
+}
 #nav-main ul {
     padding: 0;
     margin: 0 auto;
@@ -472,6 +479,12 @@ figure.fluid-images-3 img:first-child {
 
 .textbig {
     font-size: 7rem;
+}
+.textmid {
+    font-size: 1.75rem;
+}
+.textmid2 {
+    font-size: 2rem;
 }
 .textshadow-mid {
     text-shadow: 4px 4px 8px #333;
