Perch install complete

--- a/perch/templates/content/custom_list_unordered.html
+++ b/perch/templates/content/custom_list_unordered.html
@@ -1,9 +1,11 @@
 <perch:help>
-<p>This is a single line of text in a box. Unfortunately the box has a limited width - this means that the text within is longer than it initially appears!</p>
+<p>This allows you to add one or multiple lines to a list of items. Unfortunately each text box here has a limited width - this means that the text within is longer than it initially appears!</p>
 
 <p>To select all of the text, click once in the box and press “CTRL+A” or go to Edit > Select All in your browser window.</p>
 <p>You can then press backspace or start typing to completely replace everything in the text box.</p>
 <p>Alternatively if you just want to edit part of it, you'll need to left click and drag to the right (or left if you need to go backwards!) until the part of the link that you want to edit comes into view, and then left click in the desired spot to allow yourself to type (you can use directional arrows on your keyboard to help with exact positioning as well).</p>
+
+<p>To add a new list item, click Save and Add Another at the bottom of this page. You can also delete an item by clicking the little red delete button to the top right of each list item.</p>
 </perch:help>
 
-<perch:content id="text" type="text" label="Text" required="true" title="true" />
+<li><perch:content id="textList" type="text" label="List item text" required="true" title="true" /></li>
