--- a/perch/templates/content/article.html
+++ b/perch/templates/content/article.html
@@ -1,8 +1,8 @@
 <h2><perch:content id="heading" type="text" label="Heading" required="true" title="true" /></h2>
 <p class="date"><perch:content id="date" type="date" label="Date" format="%d %B %Y" required="true" /></p>
-<hr>
-<perch:content id="body" type="textarea" label="Body" markdown="true" editor="simplemde" required="true" imagewidth="800" />
-<hr>
+
+<perch:content id="body" type="textarea" label="Body" markdown="true" editor="markitup" required="true" />
+
 <p class="vcard">
     &copy; <perch:content id="date" type="date" label="Date" format="Y" />
     
