--- a/css/breaks.css
+++ b/css/breaks.css
@@ -37,7 +37,11 @@
     }
     
     .homecarousel {
-        height: 500px;
+        height: 400px;
+        
+    }
+    .homecarousel-bg {
+        
     }
     .hometop {
         background: url(../img/bg-hometop.jpg) 60% 0%/215%;
