--- a/perch/templates/content/section-events-right.html
+++ b/perch/templates/content/section-events-right.html
@@ -1,11 +1,22 @@
 <perch:help>
     <p><strong>Instructions:</strong></p>
     
-    <p>This is for writing multiple blurbs/blocks of text for a given part of a page, with titles for each section of text. You can use "Save and Add Another" to add another titled section. Otherwise just type in the boxes below, the first one being for the title of the section of the text and the bottom for the actual body of the text.</p>
+    <p>This is the first box in the right-hand section of the Our Regular Events page. As it may or may not be needed, this entire area can be edited or even removed as needed.</p>
+    
+    <p><strong>To show or hide this area on the website:</strong> Select "hidden" from the "Show/hide this area" menu below to hide everything, select "not-hidden" to show everything.</p>
+    <p><strong>To add a section:</strong> Click "Add an item" in the lower right corner underneath the bottom-most section below.</p>
+    <p><strong>To delete a section:</strong> Mouse over the number next to a section to get a red X to appear, click the red X to delete the section.</p>
+    <p><strong>To reorder sections:</strong> Mouse over the number as above, but instead click and hold on the three lines underneath the red X and drag your mouse down/up to reorder.</p>
+    
+    <p>As ever for any of this to take effect you need to click Save Changes at the bottom. If you make a mistake just click Cancel instead.</p>
 </perch:help>
 
-<article class="background-white75 border-top-15-orange boxshadow-softextra6 five columns margin-6-top offset-by-two" role="article">
+<article class="background-white75 border-top-15-orange boxshadow-softextra6 five columns margin-6-top offset-by-two <perch:content id="enabler" type="select" label="Show/hide this area" options="hidden, not-hidden" allowempty="false" required="true" />" role="article">
     <h1 class="centre padding-1"><perch:content id="heading" type="text" label="Overall heading" required="true" title="true" /></h1>
     
-    <?php perch_content('Right-hand top box sections'); ?>
+    <perch:repeater id="sections" label="Sections within this area">
+        <h2 class="padding-1"><perch:content id="heading-section" type="text" label="Heading for this section" required="true" title="true" /></h2>
+        
+        <perch:content id="body" type="textarea" label="Body text for this section" markdown="true" editor="markitup" required="true" />
+    </perch:repeater>
 </article>
