Perch diary page and holiday club page

--- a/perch/templates/content/custom_diary_table.html
+++ b/perch/templates/content/custom_diary_table.html
@@ -4,7 +4,7 @@
     <p>This is for the weekly diary. You can add/delete entries here and change the period that the diary is for, see below.</p>
     
     <p><strong>To add a new diary entry:</strong> Click "Add an item" in the lower right corner underneath the bottom-most diary entry.</p>
-    <p><strong>To delete a diary entry:</strong> Mouse over the number next to a diary entry below to get a red X to appear, click the red X to delete the bullet point.</p>
+    <p><strong>To delete a diary entry:</strong> Mouse over the number next to a diary entry below to get a red X to appear, click the red X to delete the entry.</p>
     <p><strong>To reorder diary entries:</strong> Mouse over the number as above, but instead click and hold on the three lines underneath the red X and drag your mouse down/up to reorder.</p>
     
     <p>As ever for any of this to take effect you need to click Save Changes at the bottom. If you make a mistake just click Cancel instead.</p>
