--- a/perch/templates/content/custom_newssheet.html
+++ b/perch/templates/content/custom_newssheet.html
@@ -19,34 +19,11 @@
     </p>
 </perch:help>
 
-<h1 class="centre padding-1">Pictures from <perch:content id="clubtitle" type="text" required="true" label="Pictures from" title="true" help="Club title and year, i.e. Rocky's Plaice (2016)" /></h1>
-                
-<p class="centre">(All identifiable pictures of children used with permission of parents)</p>
-
-<perch:repeater id="photos_row" label="Photo rows" title="true">
-    <div class="left margin-4-top">
-        <figure class="fluid-images-hc">
-            <a class="link-nostyle" href="<perch:content id="photo1" type="image" required="true" />">
-                <img
-                    alt="Photo from our Holiday Club"
-                    role="img"
-                    src="<perch:content id="photo1" type="image" required="true" quality="65" />"
-                >
-            </a>
-            <a class="link-nostyle" href="<perch:content id="photo2" type="image" required="true" />">
-                <img
-                    alt="Photo from our Holiday Club"
-                    role="img"
-                    src="<perch:content id="photo2" type="image" required="true" quality="65" />"
-                >
-            </a>
-            <a class="link-nostyle" href="<perch:content id="photo3" type="image" required="true" />">
-                <img
-                    alt="Photo from our Holiday Club"
-                    role="img"
-                    src="<perch:content id="photo3" type="image" required="true" quality="65" />"
-                >
-            </a>
-        </figure>
-    </div>
-</perch:repeater>
+<a class="link-nostyle" href="<perch:content id="newssheet" type="image" required="true" />">
+    <img
+        alt="Image of this week's news sheet"
+        class="fluid-100"
+        role="img"
+        src="<perch:content id="newssheet" type="image" required="true" quality="65" />"
+    >            
+</a>
