Newssheet and contact us Perch

--- a/perch/templates/content/custom_newssheet.html
+++ b/perch/templates/content/custom_newssheet.html
@@ -1,11 +1,12 @@
 <perch:help>
     <p><strong>Instructions:</strong></p>
     
-    <p>This is for the image gallery on the Holiday Club page. The gallery is split into rows of three images each. You can enter the title of the Holiday Club that these pictures are from in the "Pictures from" area below.</p>
+    <p>This is for the display of the weekly newssheet on the newssheet page. You can add images below, as many as needed to show all the pages of the news sheet.</p>
     
-    <p><strong>To add a new row of images:</strong> Click "Add an item" in the lower right corner underneath the bottom-most group of images.</p>
-    <p><strong>To delete a row of images:</strong> Mouse over the number at the top of a group of images below to get a red X to appear, click the red X to delete the entry.</p>
-    <p><strong>To reorder image rows:</strong> Mouse over the number as above, but instead click and hold on the three lines underneath the red X and drag your mouse down/up to reorder.</p>
+    <p><strong>To add an extra image:</strong> Click "Save &amp; add another" at the bottom of the page. Another image item will appear at the bottom of the page.</p>
+    <p><strong>To delete an image:</strong> Click the red Delete button next to the image you want to delete. Click Delete in the confirmation message that appears.</p>
+    
+    <p><strong>N.B. Recommended size for a newssheet photo/scan is 1368 pixels across (most cameras will produce images of at least this size).</strong></p>
     
     <p><strong>To upload an image:</strong> Follow the usual steps as with any other image/file on the website:<br /><br />
     
@@ -22,7 +23,7 @@
 <a class="link-nostyle" href="<perch:content id="newssheet" type="image" required="true" />">
     <img
         alt="Image of this week's news sheet"
-        class="fluid-100"
+        class="boxshadow-softextra6 fluid-100 margin-4-top"
         role="img"
         src="<perch:content id="newssheet" type="image" required="true" quality="65" />"
     >            
