--- a/perch/templates/content/custom_disabled_list.html
+++ b/perch/templates/content/custom_disabled_list.html
@@ -12,9 +12,9 @@
     <p>As ever for any of this to take effect you need to click Save Changes at the bottom. If you make a mistake just click Cancel instead.</p>
 </perch:help>
 
-<h1 class="padding-1"><perch:content id="heading" type="text" label="Heading for section" required="true" title="true" /></h1>
+<h1 class="padding-2"><perch:content id="heading" type="text" label="Heading for section" required="true" title="true" /></h1>
 
-<ul class="padding-3">
+<ul class="padding-4-left">
     <perch:repeater id="sections" label="Bullet points for this section">
         <li><perch:content id="body" type="text" label="Text for this bullet point" required="true" /></li>
     </perch:repeater>
