--- a/perch/templates/content/section-events-right.html
+++ b/perch/templates/content/section-events-right.html
@@ -11,7 +11,7 @@
     <p>As ever for any of this to take effect you need to click Save Changes at the bottom. If you make a mistake just click Cancel instead.</p>
 </perch:help>
 
-<article class="background-white75 border-top-15-orange boxshadow-softextra6 five columns margin-6-top offset-by-two <perch:content id="enabler" type="select" label="Show/hide this area" options="hidden, not-hidden" allowempty="false" required="true" />" role="article">
+<article class="background-white75 border-top-15-orange boxshadow-softextra6 five columns margin-6-top offset-by-one <perch:content id="enabler" type="select" label="Show/hide this area" options="hidden, not-hidden" allowempty="false" required="true" />" role="article">
     <h1 class="centre padding-1"><perch:content id="heading" type="text" label="Overall heading" required="true" title="true" /></h1>
     
     <perch:repeater id="sections" label="Sections within this area">
